Finish base of website. Add D3 visualizer.

--- a/src/website/static/index.html
+++ b/src/website/static/index.html
@@ -3,24 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>CS207 Visualizer</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 <h1>CS207 Visualizer</h1>
 <hr>
 <div>
-    <h2>Select on parameters</h2>
+    <h2>Select on paramgroups</h2>
+    <form id="param-class">
+        <h3>Parameter class:</h3>
+        <input type="radio" name="paramgroup" value="mean"> Mean<br />
+        <input type="radio" name="paramgroup" value="std"> Standard Deviation<br />
+        <input type="radio" name="paramgroup" value="level"> Level<br />
+        <input type="radio" name="paramgroup" value="blarg"> Blarg<br />
+        <input type="radio" name="paramgroup" value="none" checked> None<br />
+    </form>
+    <h3>Parameter value:</h3>
+    <form id="param-value">
+        <div class='dynamic-vals'>None</div>
+    </form>
+    <form id="submit-form">
+        <input type="submit" value="Submit">
+    </form>
+
 </div>
 <hr>
 <div>
     <h2>Select ID of timeseries to visualize</h2>
+    <table id="select-series" border="1" cellpadding="3"></table>
 </div>
 <hr>
 <div>
     <h2>Selected timeseries</h2>
+    <table border="1">
+        <tr><td><svg width="800" height="400" id="selected-timeseries"></svg></td></tr>
+    </table>
 </div>
 <hr>
 <div>
     <h2>Top 5 most similar timeseries</h2>
+    <table border="1">
+        <tr><td><svg width="800" height="400" id="similar-timeseries-1"></svg><br /></td></tr>
+        <tr><td><svg width="800" height="400" id="similar-timeseries-2"></svg><br /></td></tr>
+        <tr><td><svg width="800" height="400" id="similar-timeseries-3"></svg><br /></td></tr>
+        <tr><td><svg width="800" height="400" id="similar-timeseries-4"></svg><br /></td></tr>
+        <tr><td><svg width="800" height="400" id="similar-timeseries-5"></svg><br /></td></tr>
+    </table>
+</div>
+<hr>
+<div>
+    <h3>Generate random data</h3>
+    <button type="button" id="generate-random">Generate One</button>
 </div>
 </body>
 </html>
