--- a/src/website/static/index.html
+++ b/src/website/static/index.html
@@ -59,6 +59,7 @@
     <h4>Upload a timeseries JSON</h4>
     <input type="file" id="file-select" name="json[]" />
     <button id="upload-button">Upload</button>
+    <button id="similar-button">View Similar</button>
     <h4>Generate random data</h4>
     <button type="button" id="generate-random">Generate One</button>
 </div>
