added new plotting

--- a/src/website/static/index.html
+++ b/src/website/static/index.html
@@ -6,15 +6,18 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="js/queue.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.flot.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/javascript" src="main.js"></script>
 
 </head>
 <body>
-<h1>CS207 Visualizer</h1>
+<h1>CS207 Visualizer Test</h1>
 <hr>
 
 <div>
+    <div id="placeholder"></div>
     <h2>Select on paramgroups</h2>
     <form id="param-class">
         <h3>Parameter class:</h3>
