updated anthony's changes

--- a/src/website/static/index.html
+++ b/src/website/static/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>CS207 Visualizer</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="js/queue.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.flot.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/javascript" src="main.js"></script>
 
